# i2a

.github/workflows/: auto-release.yml
emissary/: Cargo.toml  README.md
emissary/emissary-cli/src/: lib.rs  main.rs
i2a/: Cargo.toml
i2a/src/: main.rs
scripts/: install.bat  install.ps1
